--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <article></article>
     <article></article>
     <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
   </main>
 </body>
 </html>
